Updated Gradle to the latest 6+ release. Updated projects dependencies to the latest versions. Replaced IAnnotationTransformer3 with IAnnotationTransformer as a corresponding issue is already fixed in TestNG.